<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.codeclou</groupId>
    <artifactId>jira-rest-app-demo</artifactId>
    <version>1.0.0</version>
    <organization>
        <name>codeclou.io</name>
        <url>http://codeclou.io/</url>
    </organization>
    <name>Jira 10 REST V2 Platform 7 App</name>
    <description>demo.</description>
    <packaging>atlassian-plugin</packaging>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.atlassian.jira</groupId>
                <artifactId>jira-api-bom</artifactId>                <!-- REMOVED jira-project and replaced see https://developer.atlassian.com/server/jira/platform/changelog/#CHANGE-1551 -->
                <version>${jira.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.atlassian.platform.dependencies</groupId>
                <artifactId>platform-public-api</artifactId>
                <version>${platform.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.atlassian.platform.dependencies</groupId>
                <artifactId>platform-deprecated-public-api</artifactId>
                <version>${platform.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>com.atlassian.jira</groupId>
            <artifactId>jira-api</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- https://developer.atlassian.com/server/framework/atlassian-sdk/spring-java-config-dependencies/ -->
        <!-- JAVA CONFIG DEPS START -->
        <dependency>
            <groupId>org.osgi</groupId>
            <artifactId>osgi.core</artifactId>
            <version>6.0.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.atlassian.plugins</groupId>
            <artifactId>atlassian-plugins-osgi-javaconfig</artifactId>
            <version>0.6.0</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-beans</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.inject</groupId>
            <artifactId>javax.inject</artifactId>
            <version>1</version>
            <scope>provided</scope>
        </dependency>
        <!-- JAVA CONFIG DEPS END -->

        <!-- JIRA REST V2 START -->
        <dependency>
            <groupId>jakarta.ws.rs</groupId>
            <artifactId>jakarta.ws.rs-api</artifactId>
            <version>2.1.6</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.atlassian.plugins.rest</groupId>
            <artifactId>atlassian-rest-v2-api</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jersey.core</groupId>
            <artifactId>jersey-common</artifactId>
            <version>2.22.2</version>
            <scope>test</scope>            <!-- needed for UnitTests -->
        </dependency>
        <!-- JIRA 9.15/10 REST END -->

        <!-- JIRA 10 LOGGING START -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.22.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.22.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.13</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>2.22.1</version>
            <scope>compile</scope>            <!-- needed, otherwise NOOP logging provider! -->
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j2-impl</artifactId>
            <version>2.22.1</version>
            <scope>compile</scope>            <!-- needed, otherwise NOOP logging provider! -->
        </dependency>
        <!-- JIRA 10 LOGGING END -->


        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>


        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>3.6.28</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.hamcrest</groupId>
                    <artifactId>hamcrest-core</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <!-- OTHERWISE MOCKITO ERRORS: https://github.com/mockito/mockito/issues/1606 -->
            <groupId>net.bytebuddy</groupId>
            <artifactId>byte-buddy</artifactId>
            <version>1.14.5</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>net.bytebuddy</groupId>
            <artifactId>byte-buddy-agent</artifactId>
            <version>1.14.5</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-module-junit4</artifactId>
            <version>2.0.9</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-api-mockito2</artifactId>
            <version>2.0.9</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.openpojo</groupId>
            <artifactId>openpojo</artifactId>
            <version>0.8.6</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-library</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>nl.jqno.equalsverifier</groupId>
            <artifactId>equalsverifier</artifactId>
            <version>3.16.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-core</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-integration</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>com.atlassian.plugins</groupId>
            <artifactId>atlassian-plugins-webresource</artifactId>
            <scope>provided</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <!-- JDK11 AND JDK17 -->
                    <argLine>
                        -Xmx1024m -XX:MaxMetaspaceSize=2048m
                        --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED
                        --add-opens java.logging/java.util.logging=ALL-UNNAMED
                        --add-opens java.base/java.time.zone=ALL-UNNAMED
                        --add-opens java.base/java.lang.reflect=ALL-UNNAMED
                        --add-opens java.base/java.security.cert=ALL-UNNAMED
                        --add-opens java.base/java.text=ALL-UNNAMED
                        --add-opens java.base/java.net=ALL-UNNAMED
                        --add-opens java.base/java.nio.charset=ALL-UNNAMED
                        --add-opens java.base/java.nio.file=ALL-UNNAMED
                        --add-opens java.base/sun.nio.fs=ALL-UNNAMED
                        --add-opens java.base/sun.security.x509=ALL-UNNAMED
                        --add-opens java.base/java.util.regex=ALL-UNNAMED
                        --add-opens java.base/java.util.stream=ALL-UNNAMED
                        --add-opens java.base/java.util.concurrent=ALL-UNNAMED
                        --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED
                        --add-opens java.base/java.util.concurrent.locks=ALL-UNNAMED
                        --add-opens java.base/java.time=ALL-UNNAMED
                        --add-opens java.base/java.util=ALL-UNNAMED
                        --add-opens java.base/java.io=ALL-UNNAMED
                        --add-opens java.base/java.lang=ALL-UNNAMED
                        --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
                        --add-opens java.security.jgss/sun.security.krb5=ALL-UNNAMED
                        --add-opens java.security.jgss/sun.security.krb5.internal=ALL-UNNAMED
                        --add-opens java.base/java.time=ALL-UNNAMED
                    </argLine>
                    <!-- NEVER NEVER CHANGE THIS - DB TESTS MUST RUN SEQUENTIALLY !!!! -->
                    <!-- NEVER NEVER CHANGE THIS - DB TESTS MUST RUN SEQUENTIALLY !!!! -->
                    <!-- NEVER NEVER CHANGE THIS - DB TESTS MUST RUN SEQUENTIALLY !!!! -->
                    <!-- NEVER NEVER CHANGE THIS - DB TESTS MUST RUN SEQUENTIALLY !!!! -->
                    <forkCount>1</forkCount>                    <!-- NEVER NEVER CHANGE THIS - DB TESTS MUST RUN SEQUENTIALLY !!!! -->
                    <reuseForks>false</reuseForks>                    <!-- NEVER NEVER CHANGE THIS - DB TESTS MUST RUN SEQUENTIALLY !!!! -->
                    <!-- NEVER NEVER CHANGE THIS - DB TESTS MUST RUN SEQUENTIALLY !!!! -->
                    <!-- NEVER NEVER CHANGE THIS - DB TESTS MUST RUN SEQUENTIALLY !!!! -->
                    <!-- NEVER NEVER CHANGE THIS - DB TESTS MUST RUN SEQUENTIALLY !!!! -->

                </configuration>
            </plugin>
            <plugin>
                <groupId>com.atlassian.maven.plugins</groupId>
                <artifactId>jira-maven-plugin</artifactId>
                <version>${amps.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <banningExcludes>
                        <exclude>org.slf4j:slf4j-api</exclude>
                    </banningExcludes>
                    <allowGoogleTracking>false</allowGoogleTracking>
                    <skipAllPrompts>true</skipAllPrompts>
                    <startupTimeout>22000000</startupTimeout>
                    <shutdownTimeout>6000000</shutdownTimeout>
                    <productVersion>${jira.version}</productVersion>
                    <productDataVersion>${jira.data.version}</productDataVersion>
                    <!-- DO NOT MINIFY JS/CSS VIA YUI COMPRESSOR - START -->
                    <compressJs>false</compressJs>
                    <compressCss>false</compressCss>
                    <compressResources>false</compressResources>
                    <!-- DO NOT MINIFY JS/CSS VIA YUI COMPRESSOR - END -->
                    <skipManifestValidation>true</skipManifestValidation>
                    <enableQuickReload>true</enableQuickReload>
                    <instructions>
                        <Atlassian-Plugin-Key>${atlassian.plugin.key}</Atlassian-Plugin-Key>
                        <Export-Package></Export-Package>
                        <Import-Package>
                            !com.google.gson.*,
                            !org.slf4j.*,                                                                                                                                                                                                                                                                                                                                                                                                                                                                <!-- since v3.0.0 -->
                            com.atlassian.plugins.osgi.javaconfig.*,                                                                                                                                                                                                                                                                                                                                                                                                                                                                <!-- since v3.0.0-->
                            *
                        </Import-Package>
                        <Spring-Context>*</Spring-Context>
                    </instructions>
                    <systemPropertyVariables>
                        <atlassian.webresource.disable.minification>true</atlassian.webresource.disable.minification>
                        <atlassian.dev.mode>true</atlassian.dev.mode>
                    </systemPropertyVariables>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.7.9</version>
                <configuration>
                    <includes>
                        <include>io/codeclou/**/*</include>
                    </includes>
                </configuration>

                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>post-unit-test</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <configuration>
                            <dataFile>target/jacoco.exec</dataFile>
                            <outputDirectory>target/jacoco-ut</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <properties>
        <jira.version>10.0.0-m0004</jira.version>
        <jira.data.version>10.0.0-m0004</jira.data.version>
        <amps.version>8.13.0</amps.version>
        <platform.version>7.0.0-m60-eafbaa3a0</platform.version>
        <plugin.testrunner.version>2.0.1</plugin.testrunner.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <upm.version>7.0.0-m03</upm.version>
        <atlassian.plugin.key>jira-rest-app-demo</atlassian.plugin.key>
    </properties>
</project>
